@@ -1,5 +1,7 @@
   * ipsvd_check.c, man/ipsvd-instruct.5: lines starting with # are
     comments, ignore them completely.
+  * ssl_io.c, man/sslio.8: support env variable SSLIO_BAD_CERTIFICATE to
+    optionally accept 'bad certificate's (thx Nikola Vladov).
 
 ipsvd 0.12.1
 Sat, 04 Feb 2006 19:14:23 +0000
